# RAGForge

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  AGENTS_OPENAI_SDK.md  Dockerfile  Dockerfile.frontend  README.md  README.zh-CN.md  SERVICE_TEST_REPORT.md  alembic.ini  api_examples.py  check_migration.py  check_mineru_health.py  check_reports.py  check_reports_structure.py  clean_db.py  create_project_management_kb.py  demo_ui.py  deploy.sh  docker-compose.opensearch.yml  docker-compose.qdrant.yml  docker-compose.yml  index.html  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  set_migration.py  simple_examples.py  test-acl.sh  test_api_auto.py  test_api_flow.py  test_api_simple.py  test_openai_sdk.py  test_reports_api.py  test_sdk_simple.py  (+5 more)
.github/workflows/: ci.yml  deploy-docs.yml
.trae/documents/: plan_20260209_093707.md
alembic/: env.py
alembic/versions/: 20241201_0001_init.py  20241209_0000_merge_heads.py  20241209_0001_add_document_raw_content.py  20241216_0001_add_raptor_nodes_table.py  20241216_0002_add_document_processing_log.py  20241217_0001_add_document_processing_status.py  20250120_0001_rename_llm_settings_to_model_settings.py  20250120_0002_create_system_configs_table.py  20250126_0001_add_oss_storage_fields.py  20250204_0001_add_extraction_schemas_table.py  220e9c560b57_add_chunk_indexing_status.py  343d21247c23_add_admin_tokens_table.py  4bfb74f0f2d5_add_tenant_management_fields.py  7c2149e9b995_add_tenant_isolation_strategy_field.py  a03b985e8e23_add_apikey_identity_field.py  add_tenant_model_configs.py  b67ffb501d5d_merge_heads.py  ea763878e44f_add_document_acl_fields.py  f8c3e2b1a5d4_add_conversation_message_tables.py
app/: README.md  __init__.py  config.py  exceptions.py  main.py
app/api/: AGENTS.md  __init__.py  deps.py
app/auth/: AGENTS.md  __init__.py  admin_token.py  api_key.py
app/db/: AGENTS.md  __init__.py  base.py  session.py  yaoyan_session.py
app/infra/: AGENTS.md  __init__.py  bm25_cache.py  bm25_es.py  bm25_store.py  embeddings.py  llamaindex.py  llm.py  logging.py  metrics.py  mineru_client.py  oss_client.py  redis_cache.py  rerank.py  url_utils.py  vector_store.py  vector_store_factory.py  vector_store_pg.py
app/middleware/: __init__.py  audit.py  request_trace.py
app/models/: AGENTS.md  __init__.py  admin_token.py  api_key.py  audit_log.py  chunk.py  conversation.py  document.py  extraction_schema.py  knowledge_base.py  mixins.py  provider_config.py  raptor_node.py  system_config.py  tenant.py  usage_log.py  user.py  yaoyan_project.py
app/pipeline/: AGENTS.md  README.md  __init__.py  base.py  registry.py
app/schemas/: AGENTS.md  __init__.py  admin_token.py  api_key.py  config.py  conversation.py  document.py  extraction_schema.py  ground.py  internal.py  kb.py  openai.py  pipeline.py  (+5 more)
backend/: .dockerignore  .env  .env.example  Dockerfile  alembic.ini  check_db.py  check_reports.py  check_timezone.py  entrypoint.sh  init_data.py  yaoyan.db
docs/: API_INTEGRATION.md  ASSESSMENT.md  CONTRIBUTING.md  DECISIONS.md  OPTIMIZATION_TEST_REPORT.md  PERMISSION_MANAGEMENT.md  PHARMA_RD_PLATFORM_PRODUCT_PLAN_PART1.md  PHARMA_RD_PLATFORM_PRODUCT_PLAN_PART2.md  PHARMA_RD_PLATFORM_PRODUCT_PLAN_PART3.md  PHARMA_RD_PLATFORM_PRODUCT_PLAN_PART4.md  PHARMA_RD_PLATFORM_PRODUCT_PLAN_PART5.md  PROJECT_FILTER_DESIGN.md  QUICK_LINKS.md  README.md  RICH_TEXT_PARSER.md  SECURITY.md  YAOYAN_BACKEND_DESIGN.md  documentation.md  index.md  package-lock.json  package.json  phase1.md  phase2.md  phase3.md  rich_text_editor_design.md  开发.md
frontend/: .dockerignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
project_document/: FixDBConnection_Task.md  HideUI_Task.md  SplitDrugProjectTable_Task.md  SwitchDB_Task.md  UpdateDockerComposeDB_Task.md  UpdateProjectUI_Task.md  入库API使用指南.md
scripts/: README.md  backup.sh  diagnose_network.sh  docker-entrypoint.sh  manage_es_indices.py  migrate_bm25_to_es.py  rebuild_bm25.py  restore.sh  setup_openclaw_daily_consulting.sh  setup_openclaw_pdf_analysis.sh
sdk/: README.md  __init__.py  client.py  kb_client.py
src/: App.jsx  index.css
test/: test_live_e2e.py  复方南五加口服液说明书.md
test-docs/: finance-doc.md  generate_sample_pdfs.py  public-doc.md  sample-project-1.md  sample-project-2.md  tech-doc.md
tests/: README.md  test_acl_service.py  test_admin_errors.py  test_audit_middleware.py  test_audit_service.py  test_boundary_conditions.py  test_config_validation.py  test_documents_api.py  test_e2e.py  test_e2e_health.py  test_e2e_openai.py  test_embeddings.py  test_extraction_api.py  test_health_es.py  test_ingestion_service.py  test_metrics_bm25.py  test_multi_tenant.py  test_opensearch_e2e.py  test_pdf_analysis_skill.py  test_pipeline_chunkers.py  test_query_service.py  test_qwen_doc_extraction_service.py  test_qwen_extraction_route.py  test_rag_service.py  test_redis_cache.py  test_sdk_client.py  test_security_utils.py  test_sparse_es_config.py  test_vector_field_naming.py
(+274 files in other folders)
