[project]
name = "ragforge"
version = "0.2.0"
description = "Multi-tenant RAG Pipeline Service with multiple retrievers support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.20",
    # 数据库
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "aiosqlite>=0.19.0",
    # HTTP 客户端
    "httpx>=0.27.0",
    # LLM/Embedding 客户端
    "openai>=1.30.0", # HyDE/RAGFusion/Summarizer/ChunkEnricher 使用
    # 向量数据库
    "qdrant-client>=1.9.0",
    # 检索相关
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    # LlamaIndex 集成
    "llama-index>=0.11.0", # 主包，提供 llama_index 命名空间
    "llama-index-core>=0.11.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "llama-index-retrievers-bm25>=0.1.4",
    "llama-index-llms-openai>=0.1.26",
    "llama-index-llms-ollama>=0.1.0", # Ollama LLM 支持
    "llama-index-embeddings-openai>=0.1.10",
    "llama-index-embeddings-ollama>=0.1.0", # Ollama Embedding 支持
    "llama-index-packs-raptor>=0.1.3", # RAPTOR 索引
    # 工具
    "python-dotenv>=1.0.1",
    # 测试
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.7",
    "streamlit>=1.52.1",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*", "sdk", "sdk.*"]
exclude = ["alembic", "alembic.*", "tests", "tests.*"]
