[project]
name = "yaoyan-ai"
version = "0.1.0"
description = "yaoyan AI 知识问答系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.6",
    # HTTP Client
    "httpx>=0.26.0",
    # Data Validation
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    # Utils
    "python-dotenv>=1.0.0",
    # Encryption
    "cryptography>=41.0.0",
    # Excel
    "openpyxl>=3.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
