[project]
name = "ragforge"
version = "0.2.0"
description = "Multi-tenant RAG Pipeline Service with multiple retrievers support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.20",
    # 数据库
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "aiosqlite>=0.19.0",
    # HTTP 客户端
    "httpx>=0.27.0",
    # LLM/Embedding 客户端
    "openai>=1.30.0", # HyDE/RAGFusion/Summarizer/ChunkEnricher 使用
    # 向量数据库
    "qdrant-client>=1.9.0",
    # 检索相关
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "elasticsearch>=8.12.0",
    # LlamaIndex 集成
    "llama-index>=0.11.0", # 主包，提供 llama_index 命名空间
    "llama-index-core>=0.11.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "llama-index-retrievers-bm25>=0.1.4",
    "llama-index-llms-openai>=0.1.26",
    "llama-index-llms-openai-like>=0.2.0", # OpenAI 兼容 API 支持（qwen/deepseek 等）
    "llama-index-llms-ollama>=0.1.0", # Ollama LLM 支持
    "llama-index-embeddings-openai>=0.1.10",
    "llama-index-embeddings-ollama>=0.1.0", # Ollama Embedding 支持
    "llama-index-packs-raptor>=0.1.3", # RAPTOR 索引 (LlamaIndex 实现)
    # RAPTOR 原生实现依赖
    "umap-learn>=0.5.0", # UMAP 降维
    "scikit-learn>=1.3.0", # GMM 聚类
    # Redis 缓存和限流
    "redis>=5.0.0",
    # 富文本解析
    "openpyxl>=3.1.0",        # Excel xlsx 解析
    "xlrd>=2.0.0",            # Excel xls 解析
    "python-docx>=1.1.0",     # Word docx 解析
    # OSS 对象存储
    "minio>=7.2.0",           # MinIO / S3 兼容客户端
    # 工具
    "python-dotenv>=1.0.1",
    # 避免 jieba 触发 pkg_resources 弃用警告
    "setuptools<81",
    # 开发工具
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    # 测试
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.7",
    "streamlit>=1.52.1",
    "nest-asyncio>=1.6.0",
    "reportlab>=4.4.9",
    "pymupdf>=1.26.7",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*", "sdk", "sdk.*"]
exclude = ["alembic", "alembic.*", "tests", "tests.*"]

[tool.ruff]
# 忽略的规则
lint.ignore = [
    "E402",  # 模块级导入不在文件顶部（某些文件需要延迟导入）
    "E712",  # 避免与 True/False 比较（测试代码中可接受）
    "F841",  # 局部变量赋值但未使用（测试代码中可接受）
]
# 排除的文件/目录
exclude = [
    "alembic/",
    ".git/",
    "__pycache__/",
    "*.pyc",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "e2e: end-to-end tests that rely on external services or real databases",
]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:UserWarning",
]
